--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,21 @@
-/* set up header container as a flex box giving it a background and font color*/
+/* set up header container as a flex box giving it a background and font color. 
+Set up the nav links to be evenly spaced with no underlining*/
 header {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
   background-color: #0f304e;
   color: whitesmoke;
   padding: 10px;
 }
-/* created class of header to set up flex box in the container for the headshot and name*/
-.header {
-  display: flex;
-  flex-direction: row;
+nav {
+  padding: 12px;
+}
+nav a {
+  text-decoration: none;
+  margin-left: 10px;
+  color: white;
 }
 /*give image a set height */
 #headshot {
@@ -19,81 +26,81 @@ h1 {
   font-size: 50px;
   letter-spacing: 5px;
   font-weight: 200;
-  padding-top: 40px;
+  
 }
 
 /* added sub-heading details*/
 h2 {
   font-size: 30px;
-  margin-top: 10px;
-}
-/*added attributes to list items to line up hotizontally and separate by 10px */
-li {
-  width: 40%;
-  display: inline;
-  margin-right: 10px;
-  font-size: 20px;
-}
-ul {
-}
-/*added to main element...no changes*/
-main {
+  margin-top: 20px;
   color: #0f304e;
+}
+/* Using sizing percentages and flex properties
+I arranged images as indicated in the instructions */
+#secondary-work{
+  display: flex;
+}
+#proj1 {
+  height: 10%;
+  width: 100%;
   padding-top: 20px;
-  margin-left: 90px;
-  text-decoration: none;
+}
+#proj2 {
+  /* height: 100%; */
+  width: 50%;
+}
+#proj3 {
+  /* height: 10%; */
+  width: 50%;
+}
+#proj2 img, #proj3 img{
+width: 100%;
+}
+/*set max-width to keep content within a reasonable portion of viewport*/
+main {
+ max-width: 800px;
+ margin: auto;
 }
 /*set margin to keep text within view for full screen desktop view and adjusted line height for readability */
 p {
   padding-top: 20px;
-  margin-right: 120px;
-  margin-left: 30px;
   line-height: 1.5;
+  color: #0f304e;
 }
 /* Removed underlining with text decoration attribute, sent links to right with flex-end*/
-#links {
-  color: white;
+#contact section{
+  display: flex;
+  justify-content: space-around;
+  padding: 8px;
+  font-size: 1.5rem
+  ;
+}
+
+#contact a{
   text-decoration: none;
-  justify-content: flex-end;
-  row-gap: 10px;
+  color: #0f304e;
 }
 /* */
 footer {
   background-color: #0f304e;
-  color: whitesmoke;
   height: 50px;
 }
-/* Resized images using % instead of px*/
-#proj1 {
-  height: 10%;
-  width: 80%;
-  padding-top: 20px;
-}
-#proj2 {
-  height: 10%;
-  width: 40%;
-}
-#proj3 {
-  height: 10%;
-  width: 40%;
-}
-.contact {
-  text-decoration: none;
-}
-/*wrapped images in div and set margin to line up with paragraph above*/
-.images {
-  margin-left: 30px;
-}
+
+
 
 @media screen and (max-width: 992px) {
-    .images{
-        width: 50%;
-    }
+  .images {
+    width: 50%;
+  }
 }
-    
 
 @media screen and (max-width: 576px) {
-    .images{
-        width: 100%;
-    }
+  .images {
+    width: 100%;
+  }
+  #contact section{
+    flex-direction: column;
+    font-size: 1.2rem
+    ;
+  }
 }
